--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,11 @@
 ---
 kind: pipeline
-type: docker
-name: default
+name: build images
+
+trigger:
+  event:
+    - custom
+    - cron
 
 steps:
   - name: build 3.9
