--- a/3.10/Dockerfile
+++ b/3.10/Dockerfile
@@ -1,12 +1,17 @@
-ARG PYTHON_IMAGE_VERSION=3.10-slim-bullseye
+ARG PYTHON_IMAGE=python:3.10-slim-bullseye
 
-FROM python:${PYTHON_IMAGE_VERSION}
+FROM ${PYTHON_IMAGE}
 
 RUN set -eux \
     && apt-get update \
-    && apt-get install -y --no-install-suggests --no-install-recommends \
+    && apt-get install -y --no-install-recommends \
         build-essential \
-        libpq-dev
+        libldap2-dev \
+        libsasl2-dev \
+        libpq-dev \
+        libssl-dev \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN set -eux \
     && python -m venv /opt/venv
