--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build image
+name: Build and push image
 
 on:
   workflow_dispatch:
@@ -18,7 +18,6 @@ env:
 
 jobs:
   build:
-    name: Build, push & sign
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -28,10 +27,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@main
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -52,7 +47,7 @@ jobs:
           tags: |
             ${{ env.TAG }}
 
-      - name: Build and push Docker image
+      - name: Build and push image
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
@@ -61,9 +56,3 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
