--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.actor }}/python
-  TAG: 3.10-bullseye-venv-builder
 
 jobs:
   build:
@@ -23,6 +22,14 @@ jobs:
       contents: read
       packages: write
       id-token: write
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - dockerfile: playwright-firefox/Dockerfile
+            tag: 3.10-bullseye-playwright-firefox
+          - dockerfile: venv-builder/Dockerfile
+            tag: 3.10-bullseye-venv-builder
 
     steps:
       - name: Checkout
@@ -45,14 +52,14 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            ${{ env.TAG }}
+            ${{ matrix.tag }}
 
       - name: Build and push image
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: 3.10/Dockerfile
+          file: ${{ matrix.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
