--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/python
+  IMAGE_NAME: python
 
 jobs:
   build:
@@ -25,8 +25,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [bullseye]
-        version: ['3.10', '3.11']
+        os: [bookworm]
+        version: ['3.11']
         target: [venv-builder, playwright-firefox]
 
     steps:
@@ -48,13 +48,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
           tags: |
             ${{ matrix.version }}-${{ matrix.os }}-${{ matrix.target }}
 
       - name: Build and push image
         id: build-and-push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ${{ matrix.target }}/Dockerfile
