--- a/venv-builder/Dockerfile
+++ b/venv-builder/Dockerfile
@@ -1,6 +1,6 @@
 # hadolint global ignore=DL3006,DL3008,DL3013
 
-ARG BUILD_IMAGE=python:3.11-slim-bullseye
+ARG BUILD_IMAGE=python:3.11-slim-bookworm
 
 FROM ${BUILD_IMAGE}
 
